# CommandWorkstationV2

./: CMakeLists.txt  index.html  index.html.1  main.cpp
MBA/: .~lock.TCC_PT_RodrigoBAntonio.docx#  Resultados Preliminares - Rodrigo Borraschi Antonio.docx  TCC_PT_RodrigoBAntonio.docx  [Projeto de pesquisa] - Rodrigo Borraschi Antonio.docx
build-agent/: CMakeCache.txt  Makefile  cmake_install.cmake
build-agent/.qt/: .qmlls.build.ini  .qmlls.build.ini.part  QtDeploySupport.cmake  QtDeployTargets.cmake  appCommand_Workstation_qml.cmake  appCommand_Workstation_res.cmake
build-agent/.qt/deploy_qml_imports/: appCommand_Workstation.cmake
build-agent/.qt/qml_imports/: appCommand_Workstation_build.rsp  appCommand_Workstation_conf.rsp
build-agent/.qt/rcc/: appCommand_Workstation_raw_qml_0.qrc  qmake_Command_Workstation.qrc  qrc_appCommand_Workstation_raw_qml_0.cpp  qrc_qmake_Command_Workstation.cpp
build-agent/Command_Workstation/: Main.qml  appCommand_Workstation_qml_module_dir_map.qrc
build-agent/appCommand_Workstation_autogen/: deps  moc_predefs.h
build-agent/meta_types/: appCommand_Workstation_json_file_list.txt  appCommand_Workstation_json_file_list.txt.timestamp  qt6appcommand_workstation_metatypes.json.gen
docs/: tcc_texto_revisado.md  test_results.json
src/: command_runner.cpp  command_runner.h  database_manager.cpp  database_manager.h  terminal_launcher.cpp  terminal_launcher.h  workstation_bridge.cpp  workstation_bridge.h
tools/: gen_diagrams.py  generate_resultados_preliminares.py  run_mvp_tests.py
(+17 files in other folders)
